--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - "./data/db:/var/lib/mysql:delegated"
     ports:
-      - :${MYSQL_PORT}
+      - ${MYSQL_PORT2}:${MYSQL_PORT}
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -33,6 +33,8 @@ services:
       - 443:443
       - 443:443/udp
       - 7080:7080
+    depends_on:
+      - mariadb
     restart: always
     environment:
       TZ: ${TimeZone}
